[Finish_responsive]CARAVAN学習課題

--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html lang="ja">
   <head>
     <meta charset="utf-8" />
+    <!--レスポンシブ対応viewpointのメタタグ-->
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <!--Font Awesomeの記述はstyle.cssの記述よりも前-->
     <script src="https://kit.fontawesome.com/60ee8a5e8e.js" crossorigin="anonymous"></script></script>
@@ -30,7 +31,7 @@
     <nav>
       <ul class="nav-list">
         <li class="nav-list-item">
-          <a href="index.htmk">Home</a>
+          <a href="index.html">Home</a>
         </li>
         <li class="nav-list-item">About</li>
         <li class="nav-list-item">Topic</li>
